syntax = "proto3";

option go_package = "github.com/Jacksmall/go-api-framework/testguide";

package testguide;

service TestGuide {
    // unary grpc
    rpc GetFeature(Point) returns (Feature) {}
    // server streaming
    rpc GetFeatures(Rectangle) returns (stream Feature) {}
    // client streaming
    rpc RecordFeature(stream Point) returns (TestSummary) {}
    // bidirectional streaming
    rpc TestChat(stream TestNote) returns (stream TestNote) {}
}

// message type Point
message Point {
    int32 latitude = 1;
    int32 longitude = 2;
}

message Rectangle {
    Point lo = 1;
    Point hi = 2;
}

message Feature {
    string name = 1;
    Point location = 2;
}

message TestNote {
    Point location = 1;
    string message = 2;
}

message TestSummary {
    int32 point_count = 1;
    int32 feature_count = 2;
    int32 distance = 3;
    int32 elapsed = 4;
}
